<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_connection"
    tools:context="com.example.phompang.thermalfeedback.ConnectionActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:layout_collapseMode="pin"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
    </android.support.design.widget.AppBarLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/connection_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Connection"
            android:textSize="24sp"
            android:textColor="@color/textPrimary"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_developer_board_black_24dp"
            android:drawableTint="@color/textSecondary"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:text="@string/not_connect"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/connection_text"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" />

        <ImageButton
            android:id="@+id/refresh"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:tint="@color/textSecondary"
            android:src="@drawable/ic_refresh_black_24dp"
            app:layout_constraintTop_toTopOf="@+id/status"
            app:layout_constraintBottom_toBottomOf="@+id/status"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginEnd="16dp" />

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/divider"
            app:layout_constraintTop_toBottomOf="@id/status"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/test_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Test Thermal Stimuli"
            android:textSize="24sp"
            android:textColor="@color/textPrimary"
            app:layout_constraintTop_toBottomOf="@+id/divider"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="16dp"/>

        <Button
            android:id="@+id/very_hot"
            android:tag="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Very Hot"
            app:layout_constraintTop_toBottomOf="@+id/test_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/hot"
            android:layout_marginTop="8dp"/>
        <Button
            android:id="@+id/hot"
            android:tag="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hot"
            app:layout_constraintTop_toTopOf="@+id/very_hot"
            app:layout_constraintLeft_toRightOf="@+id/very_hot"
            app:layout_constraintRight_toRightOf="parent"/>
        <Button
            android:id="@+id/very_cold"
            android:tag="4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Very Cold"
            app:layout_constraintTop_toBottomOf="@+id/very_hot"
            app:layout_constraintLeft_toLeftOf="@+id/very_hot"/>
        <Button
            android:id="@+id/cold"
            android:tag="3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cold"
            app:layout_constraintTop_toTopOf="@+id/very_cold"
            app:layout_constraintLeft_toLeftOf="@+id/hot"/>

        <TextView
            android:id="@+id/testing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_whatshot_black_24dp"
            android:drawableTint="@color/textSecondary"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:text="Testing stimuli: "
            app:layout_constraintTop_toBottomOf="@+id/very_cold"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"/>


        <TextView
            android:id="@+id/duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_schedule_black_24dp"
            android:drawableTint="@color/textSecondary"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:text="@string/duration"
            app:layout_constraintTop_toBottomOf="@+id/testing"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/neutral"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/neutral"
            app:layout_constraintTop_toBottomOf="@id/duration"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/high"
            app:layout_constraintTop_toBottomOf="@id/neutral"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/normal"
            app:layout_constraintTop_toBottomOf="@id/high"
            app:layout_constraintLeft_toLeftOf="parent"/>

    </android.support.constraint.ConstraintLayout>
</android.support.design.widget.CoordinatorLayout>
